--- a/src/app/landingpage/login/register/registration-confirmation/registration-confirmation.component.html
+++ b/src/app/landingpage/login/register/registration-confirmation/registration-confirmation.component.html
@@ -8,6 +8,26 @@
       activation link ro confirm and complete your registration.<br>
       <b>Note:</b> Check your spam folder!
     </p>
+
+    <div class="letterDiv">
+      <div class="letter-image">
+        <div class="animated-mail">
+          <div class="back-fold"></div>
+          <div class="letter">
+            <div class="letter-border"></div>
+            <div class="letter-title"></div>
+            <div class="letter-context"></div>
+            <div class="letter-stamp">
+              <div class="letter-stamp-inner"></div>
+            </div>
+          </div>
+          <div class="top-fold"></div>
+          <div class="body"></div>
+          <div class="left-fold"></div>
+        </div>
+        <div class="shadow"></div>
+      </div>
+    </div>
   </div>
 
   <app-footer></app-footer>
