--- a/src/app/landingpage/login/register/registration-confirmation/registration-confirmation.component.html
+++ b/src/app/landingpage/login/register/registration-confirmation/registration-confirmation.component.html
@@ -10,23 +10,25 @@
     </p>
 
     <div class="letterDiv">
-      <div class="letter-image">
-        <div class="animated-mail">
-          <div class="back-fold"></div>
-          <div class="letter">
-            <div class="letter-border"></div>
-            <div class="letter-title"></div>
-            <div class="letter-context"></div>
-            <div class="letter-stamp">
-              <div class="letter-stamp-inner"></div>
+      <a href="mailto: {{ userService.user_email_copy }}">
+        <div class="letter-image">
+          <div class="animated-mail">
+            <div class="back-fold"></div>
+            <div class="letter">
+              <div class="letter-border"></div>
+              <div class="letter-title"></div>
+              <div class="letter-context"></div>
+              <div class="letter-stamp">
+                <div class="letter-stamp-inner"></div>
+              </div>
             </div>
+            <div class="top-fold"></div>
+            <div class="body"></div>
+            <div class="left-fold"></div>
           </div>
-          <div class="top-fold"></div>
-          <div class="body"></div>
-          <div class="left-fold"></div>
+          <div class="shadow"></div>
         </div>
-        <div class="shadow"></div>
-      </div>
+      </a>  
     </div>
   </div>
 
