--- a/src/app/landingpage/login/login.component.scss
+++ b/src/app/landingpage/login/login.component.scss
@@ -39,7 +39,13 @@ section {
         color: $btnColor;
         font-weight: 700;
         font-size: 18px;
+        cursor: pointer;
+        &:hover {
+            font-weight: 900;
+            color: #0919ce;
+        }
     }
+ 
     .blackText{
         color: black;
         font-weight: 500;
