--- a/src/app/landingpage/video-site/video-site.component.html
+++ b/src/app/landingpage/video-site/video-site.component.html
@@ -10,7 +10,8 @@
         <div class="logoBox">
             <img src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
             <div class="headerBtns">
-              <button class="headerBtns">Category</button>
+                <button [routerLink]="['/video_categorys', 'action']" class="headerBtns">Category</button>
+
               <button class="headerBtns">Favorites</button>
             </div>
         </div>
