--- a/src/app/landingpage/video-site/profile-details/profile-details.component.html
+++ b/src/app/landingpage/video-site/profile-details/profile-details.component.html
@@ -20,10 +20,11 @@
                                 <span class="invalidFeedback"><img src="../../../../assets/img/warning.svg" alt="warningImg">
                                     This field must have 3 or more characters.</span>
                             }
-                            @if ($index == 2 && !checkEmailFormat($index)) {
-                                <span class="invalidFeedback"><img src="../../../../assets/img/warning.svg" alt="warningImg">
-                                    Please enter a valid email.</span>
-                            }
+                        }
+                        <!-- render error (email)-->
+                        @if ($index == 2 && !checkEmailFormat($index)) {
+                            <span class="invalidFeedback"><img src="../../../../assets/img/warning.svg" alt="warningImg">
+                                Please enter a valid email.</span>
                         }
                         <!-- render error (phone)-->
                         @if (!checkPhoneFormat($index)) {
