add sharedVideoHeader and router

--- a/src/app/landingpage/video-site/video-site.component.html
+++ b/src/app/landingpage/video-site/video-site.component.html
@@ -6,7 +6,8 @@
 </div>
 
 <section>
-    <header>
+    <app-header></app-header>
+    <!-- <header>
         <div class="logoBox">
             <img src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
             <div class="headerBtns">
@@ -22,7 +23,7 @@
                 <button (click)="logout()" class="profilSelectionBtn" ><img src="../../../assets/icons/logout.svg" alt="log out img"/>Log out</button>
             </div>
         </div>
-    </header>
+    </header> -->
 
     <div class="descriptionDivBreakout">
         <h1>Breakout</h1>
