--- a/src/app/landingpage/video-site/video-category/video-category.component.html
+++ b/src/app/landingpage/video-site/video-category/video-category.component.html
@@ -6,11 +6,22 @@
 </div>
 
 <section>
-    <header>
+    <app-header></app-header>
+    <!-- <header>
         <div class="logoBox">
             <img src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
             <div class="headerBtns">
-                <button [routerLink]="['/video_categorys', 'action']" class="headerBtns">Category</button>
+                <button class="headerBtns" (click)="toggleCategoryMenu($event)">Category</button>
+                
+                <div class="categorySelection" [ngClass]="{'slideInAnimation': showCategorySelection, 'slideOutAnimation': !showCategorySelection}"(click)="$event.stopPropagation()">
+                    <button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_categorys', 'action']" class="profilSelectionBtn">Action</button>
+                    <button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_categorys', 'anime']" class="profilSelectionBtn">Anime</button>
+                    <button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_categorys', 'drama']" class="profilSelectionBtn">Drama</button>
+                    <button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_categorys', 'romance']" class="profilSelectionBtn">Romance</button>
+                    <button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_categorys', 'adventure']" class="profilSelectionBtn">Adventure</button>
+                    
+                   
+                </div>
               <button class="headerBtns">Favorites</button>
             </div>
         </div>
@@ -21,7 +32,7 @@
                 <button (click)="logout()" class="profilSelectionBtn" ><img src="../../../assets/icons/logout.svg" alt="log out img"/>Log out</button>
             </div>
         </div>
-    </header>
+    </header> -->
 
     <div class="descriptionDivBreakout">
         <h1>Breakout</h1>
