--- a/src/app/shared/videoSite/header/header.component.scss
+++ b/src/app/shared/videoSite/header/header.component.scss
@@ -21,6 +21,7 @@ header{
         width: auto;
         display: flex;
         .logo{
+            cursor: pointer;
             z-index: 2;
             margin-right: 5rem;
         }
