--- a/src/app/shared/videoSite/header/header.component.html
+++ b/src/app/shared/videoSite/header/header.component.html
@@ -1,7 +1,8 @@
 <header>
     <div class="logoBox">
-        <img src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
+        <img [routerLink]="['/video_site']" src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
         <div class="headerBtns">
+            <button [routerLink]="['/video_site']" class="headerBtns">Home</button>
             <button class="headerBtns" (click)="toggleCategoryMenu($event)">Category</button>
             
             <div class="categorySelection" [ngClass]="{'slideInAnimation': showCategorySelection, 'slideOutAnimation': !showCategorySelection}"(click)="$event.stopPropagation()">
@@ -10,8 +11,6 @@
                 <button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_categorys', 'drama']" class="profilSelectionBtn">Drama</button>
                 <button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_categorys', 'romance']" class="profilSelectionBtn">Romance</button>
                 <button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_categorys', 'adventure']" class="profilSelectionBtn">Adventure</button>
-                
-               
             </div>
           <button class="headerBtns">Favorites</button>
         </div>
