--- a/src/app/landingpage/video-site/video-category/video-category.component.html
+++ b/src/app/landingpage/video-site/video-category/video-category.component.html
@@ -6,7 +6,8 @@
 </div>
 
 <section>
-    <app-header></app-header>
+    
+    <!-- <app-header></app-header> -->
     <!-- <header>
         <div class="logoBox">
             <img src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
@@ -33,7 +34,7 @@
             </div>
         </div>
     </header> -->
-
+<!-- 
     <div class="descriptionDivBreakout">
         <h1>Breakout</h1>
         <span>
@@ -43,8 +44,9 @@
             truth.
         </span>
         <button class="blueBtn"><img src="../../../assets/icons/play_arrow.svg" alt="">Play</button>
-    </div>
+    </div> -->
     
+<section>
     <div class="videoDiv">
         <div class="videoDiv2">
             <div class="videoPosition">
