--- a/src/app/landingpage/video-site/video-site.component.html
+++ b/src/app/landingpage/video-site/video-site.component.html
@@ -6,8 +6,7 @@
 </div>
 
 <section>
-    <app-header></app-header>
-     
+    <!-- <app-header></app-header> -->
     <!-- <header>
         <div class="logoBox">
             <img src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
@@ -36,7 +35,6 @@
         </span>
         <button class="blueBtn"><img src="../../../assets/icons/play_arrow.svg" alt="">Play</button>
     </div>
-    
     <div class="videoDiv">
         <div class="videoDiv2">
             <div class="videoPosition">
