--- a/src/app/shared/videoSite/header/header.component.html
+++ b/src/app/shared/videoSite/header/header.component.html
@@ -23,3 +23,8 @@
         </div>
     </div>
 </header>
+
+
+<!-- 
+<button (click)="toggleCategoryMenu($event)" [routerLink]="[{ outlets: { videoContent: ['video_categorys', 'action'] } }]" class="profilSelectionBtn">Action</button>
+<button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_site', { outlets: { videoContent: ['video_categorys', 'action'] } }]" class="profilSelectionBtn">Anime</button> -->
