--- a/src/app/shared/videoSite/header/header.component.scss
+++ b/src/app/shared/videoSite/header/header.component.scss
@@ -16,6 +16,7 @@ header{
     width: calc(100% - 2rem);
     position: absolute;
     top: 0;
+    background-color: #0F1F26;
     .logoBox{
         width: auto;
         display: flex;
