--- a/src/app/landingpage/video-site/video-site.component.scss
+++ b/src/app/landingpage/video-site/video-site.component.scss
@@ -16,6 +16,7 @@ section{
     right: 0;
     object-fit: cover;
     overflow: hidden;
+    background-color: #0F1F26;
     .backgroundVideo {
         width: 100%;
         height: 100%;
@@ -130,8 +131,6 @@ header{
         }
     }
 }
-
-
 .slideInAnimation {
     animation: slideDown 0.3s forwards;
 }
