--- a/src/app/landingpage/video-site/video-site.component.html
+++ b/src/app/landingpage/video-site/video-site.component.html
@@ -64,7 +64,8 @@
                     </div>
                     <div class="video4LoopBox" #video4LoopBox2>
                         @for (video of newVideos; track $index) {
-                            <app-video-preview
+                            
+                            <app-video-preview *ngIf="video.category === 'action'"
                                 [video]="video"
                                 (videoSelected)="onVideoSelected($event)"
                             ></app-video-preview>
