--- a/src/app/landingpage/video-site/favorites/favorites.component.html
+++ b/src/app/landingpage/video-site/favorites/favorites.component.html
@@ -1,18 +1,18 @@
 <section>
     <app-header></app-header>
     <div class="body">
-        @if(videoService.allVideos.length > 0){
-            @for (video of videoService.allVideos; track $index) {
+        @if(videoService.favVideos.length > 0){
+            @for (video of videoService.favVideos; track $index) {
                 <app-video-preview
                     [video]="video"
                     (videoSelected)="onVideoSelected($event)"
                 ></app-video-preview>
             }
-            <app-video-display
-                *ngIf="selectedVideo"
-                [video]="selectedVideo"
-                (closeDisplay)="closeVideoDisplay()"
-            ></app-video-display>
         }
+        <app-video-display
+            *ngIf="selectedVideo"
+            [video]="selectedVideo"
+            (closeDisplay)="closeVideoDisplay()"
+        ></app-video-display>
     </div>
 </section>
