--- a/src/app/landingpage/video-site/video-preview/video-preview.component.scss
+++ b/src/app/landingpage/video-site/video-preview/video-preview.component.scss
@@ -25,6 +25,7 @@ section {
         padding: 16px;
         transform: translateY(100%);
         opacity: 0;
+        color: white;
     }
 }
 
@@ -53,6 +54,8 @@ section {
 
 .descriptionHide {
     animation: slideOut 0.5s linear forwards;
+    height: 0;
+    opacity: 0;
 }
 
 @keyframes slideOut {
@@ -69,6 +72,7 @@ section {
     100% {
         transform: translateY(100%);
         border-radius: 12px;
+        height: 0; 
         opacity: 0;
     }
 }
