--- a/src/app/landingpage/video-site/video-site.component.html
+++ b/src/app/landingpage/video-site/video-site.component.html
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="videoPosition">
-                <h1>Category 2</h1>
+                <h1>Anime</h1>
                 <div class="video4LoopContainer">
                     <div class="arrowLeft">
                         <button (click)="ArrowLeftClick(3)"><img src="../../../assets/icons/arrowLeft.png" alt=""></button>
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="videoPosition">
-                <h1>Category 3</h1>
+                <h1>Action</h1>
                 <div class="video4LoopContainer">
                     <div class="arrowLeft">
                         <button (click)="ArrowLeftClick(4)"><img src="../../../assets/icons/arrowLeft.png" alt=""></button>
