--- a/src/app/landingpage/video-site/video-category/video-category.component.html
+++ b/src/app/landingpage/video-site/video-category/video-category.component.html
@@ -1,56 +1,19 @@
-<div class="videoPlayerBox">
+<!-- <div class="videoPlayerBox">
     <video autoplay muted loop id="myVideo" class="backgroundVideo">
         <source src="../../../assets/videos/Breakout.mp4" type="video/mp4">
     </video>
     <div class="shadow"></div>
-</div>
+</div> -->
 
 <section>
-    
-    <!-- <app-header></app-header> -->
-    <!-- <header>
-        <div class="logoBox">
-            <img src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
-            <div class="headerBtns">
-                <button class="headerBtns" (click)="toggleCategoryMenu($event)">Category</button>
-                
-                <div class="categorySelection" [ngClass]="{'slideInAnimation': showCategorySelection, 'slideOutAnimation': !showCategorySelection}"(click)="$event.stopPropagation()">
-                    <button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_categorys', 'action']" class="profilSelectionBtn">Action</button>
-                    <button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_categorys', 'anime']" class="profilSelectionBtn">Anime</button>
-                    <button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_categorys', 'drama']" class="profilSelectionBtn">Drama</button>
-                    <button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_categorys', 'romance']" class="profilSelectionBtn">Romance</button>
-                    <button (click)="toggleCategoryMenu($event)" [routerLink]="['/video_categorys', 'adventure']" class="profilSelectionBtn">Adventure</button>
-                    
-                   
-                </div>
-              <button class="headerBtns">Favorites</button>
-            </div>
-        </div>
-        <div class="btnBoxRight">
-            <button class="blueBtn" (click)="openSmallMenu()">Profile</button>
-            <div class="profilSelection" [ngClass]="{'slideInAnimation': shwonProfilSelection, 'slideOutAnimation': !shwonProfilSelection}">
-                <button class="profilSelectionBtn" [routerLink]="['/profile_details']">Manage profile</button>
-                <button (click)="logout()" class="profilSelectionBtn" ><img src="../../../assets/icons/logout.svg" alt="log out img"/>Log out</button>
-            </div>
-        </div>
-    </header> -->
-<!-- 
-    <div class="descriptionDivBreakout">
-        <h1>Breakout</h1>
-        <span>
-            In a high-security prison, a wrongly convicted man formulates a
-            meticulous plan to break out and prove his innocence. He must navigate a
-            web of alliances and betrayals to reclaim his freedom and expose the
-            truth.
-        </span>
-        <button class="blueBtn"><img src="../../../assets/icons/play_arrow.svg" alt="">Play</button>
-    </div> -->
-    
-<section>
+    <app-header></app-header>
+
     <div class="videoDiv">
+        
+        
         <div class="videoDiv2">
             <div class="videoPosition">
-                <h1>New on Videoflix</h1>
+                <h2>{{ selectedCategory}}</h2>
                 <div class="video4LoopBox">
                     @for (video of categoryVideos; track $index) {
                          <app-video-preview
