--- a/src/app/shared/category/header/header.component.scss
+++ b/src/app/shared/category/header/header.component.scss
@@ -11,14 +11,13 @@ section{
     padding-right: 5rem;
 }
 
-
 header{
     @include dFlex($j: space-between);
     padding: 1rem;
     width: calc(100% - 2rem);
     position: absolute;
     top: 0;
-    background-color: #0F1F26;
+    background-color: #060606;
     .logoBox{
         width: auto;
         display: flex;
