--- a/src/app/landingpage/video-site/favorites/favorites.component.scss
+++ b/src/app/landingpage/video-site/favorites/favorites.component.scss
@@ -1,22 +1,30 @@
-
 section {
     height: calc(100dvh - 160px);
     width: calc(100% - 80px);
+}
 
-    .body {
-        height: 100%;
-        width: 100%;
-        background-color: #0F1F26;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: flex-start; 
-        align-content: flex-start;
-        gap: 26px;
-        margin-top: 80px;
-        padding: 40px;
-    }
+.body {
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(to bottom, 
+        #0F1F26 0%,
+        #060606 16%,
+        #060606 100% 
+    );
+    display: flex;
+    flex-wrap: wrap;
+    // justify-content: flex-start; 
+    justify-content: space-evenly; 
+    align-content: flex-start;
+    gap: 26px;
+    margin-top: 80px;
+    padding: 40px;
+    overflow: auto; /* Ermöglicht Scrollen */
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    flex: 1 0 auto; 
+}
 
-    app-video-preview {
-        flex: 0 1 auto;
-    }
+.body::-webkit-scrollbar {
+    display: none; /* Safari und Chrome */
 }
