--- a/src/app/landingpage/video-site/video-category/video-category.component.scss
+++ b/src/app/landingpage/video-site/video-category/video-category.component.scss
@@ -3,7 +3,12 @@
 section{
     width: 100%;
     height: auto;
-    background-color: #060606;
+    background: linear-gradient(to bottom, 
+    #0F1F26 0%,
+    #060606 16%,
+    #060606 100% 
+);
+    
 }
 .videoPlayerBox {
     @include dFlex();
