--- a/src/app/landingpage/video-site/video-site.component.scss
+++ b/src/app/landingpage/video-site/video-site.component.scss
@@ -55,7 +55,7 @@ section{
 .videoDiv {
     min-height: 2000px;
     margin-top: 80dvh;
-    padding-left: 120px;
+    padding-left: 6rem;
 
     .videoDiv2 {
         position: absolute;
