--- a/src/app/landingpage/video-site/video-site.component.scss
+++ b/src/app/landingpage/video-site/video-site.component.scss
@@ -77,6 +77,19 @@ section{
                     overflow-x: auto;
                     overflow-y: hidden;
                     scroll-behavior: smooth;
+                     
+                    &::-webkit-scrollbar {
+                        height: 4px;
+                    }
+
+                    &::-webkit-scrollbar-thumb {
+                        background-color: #7810FF;
+                        border-radius: 2px;
+                    }
+
+                    &::-webkit-scrollbar-track {
+                        background-color: transparent;
+                    }
                 }
 
                 .arrowLeft {
