--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,23 @@ $screwWith1000: 1000px;
 }
 
 
+::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #060606e0;
+}
+
+::-webkit-scrollbar{
+    width: 6px;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb{
+    background: linear-gradient(90deg, #433CFF, #7810FF);
+    border-radius: 10px;
+}
+
+
+
 /* dm-sans-100 - latin */
 @font-face {
     font-display: swap;
