tryed do add quality btn to plyer

--- a/src/app/landingpage/video-site/video-display/video-display.component.html
+++ b/src/app/landingpage/video-site/video-display/video-display.component.html
@@ -19,7 +19,7 @@
 
       <video
         id="videoPlayer"
-        class="video-js vjs-default-skin"
+        class="video-js vjs-theme-city"
         controls
         preload="auto"
         width="640"
