--- a/src/app/landingpage/video-site/video-site.component.scss
+++ b/src/app/landingpage/video-site/video-site.component.scss
@@ -148,6 +148,54 @@ section{
     }
 }
 
+
+.descriptionVisible {
+    animation: slideIn 0.5s linear forwards;
+}
+
+@keyframes slideIn {
+    0% {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+
+    50% {
+        transform: translateY(70%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+        border-radius: 12px;
+    }
+}
+
+.descriptionHide {
+    animation: slideOut 0.5s linear forwards;
+    height: 0;
+    opacity: 0;
+}
+
+@keyframes slideOut {
+    0% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+    50% {
+        transform: translateY(30%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(100%);
+        border-radius: 12px;
+        height: 0; 
+        opacity: 0;
+    }
+}
+
 // .arrowLeft{
 //     position: absolute;
 //     top: 0;
